--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,9 @@
-<footer class="text-center" style="padding: 20px;
+<footer class="text-center" style="
               background-image: url(/images/header.jpg);
-    width: 100%;bottom: 0;position: absolute;">
+    width: 100%;    padding: 20px;bottom: 0;">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 " style="color:white; font-size: 30px;">
+        <div >
+            <div class="col-lg-12" style="color:white; font-size: 30px;">
                 Copyright © Star Cinema 2018-2019
             </div>
         </div>
