--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
-<html ng-app="movie">
+<html ng-app="movie" ng-controller="getController">
 
 <head>
-
-  <!-- <link rel="shortcut icon" href="../images/icon.jpg"/> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
+  <title>
+    <%= title %>
+  </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Datepicker - Default functionality</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
-
+  <link rel="stylesheet" href="/resources/demos/style.css">
+ 
 
 </head>
 <style>
-  .border {
-    margin-bottom: 50px;
 
-    /* margin-left: 10px; */
-    border-style: solid
+  
+
+  .col-md-3 {
+    margin-top: 30px;
+    font-size: 20px;
+    border-style: solid;
+
+    padding: 20px;
+    margin-left:5%;
+
   }
+
+  .tieude {
+    font-size: 50px;
+    text-align: center;
+
+  }
+  .img-fluid{
+    padding-top: 3%
+    
+    
+  }
+
+
 </style>
-<% include header.ejs %>
 
-<body ng-controller="listMovieController">
+<body>
 
+  <% include header.ejs %>
+  <div class="tieude"><b>Danh Sách Phim Mới</b></div>
+  <div class="container-fluid">
 
-  <!-- <div ng-repeat="movie in listMovie">
-    <img src="/images/test.jpg" style="margin-top: 100px">
-    <h2>{{movie.tenPhim}}</h2>
-    <p><span>Thể loại: </span>{{movie.theLoai}}</p>
-    <p><span>Ngày ra mắt: </span>{{movie.ngayRaMat| date:'dd-MM-yyyy' }} </p>
-  </div> -->
+    <div class="row">
 
-  <div class="row" style="text-align: center;margin-right: 0px !important; margin-top: 20px; margin-left: 10px;">
-    <div class="col-md-12">
-
-      <div class="border col-md-4" ng-repeat="movie in listMovie" style="float: left ; margin-top:10px">
-        <a href="/{{movie._id}}" style="text-decoration: none; color:black">
-
-          <img src="images/{{movie.image}}" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
-          <div class="detail">
-            <h2 class="name-film ng-binding" style="margin-top: 20px;
-            "> {{movie.tenPhim}} </h2>
-            <p class="content-film ng-binding">
-              <hr class="hr-film">
-              <span class="my-text-bold"> Thể loại: </span>{{movie.theLoai}} </p>
-            <p class="content-film ng-binding" ng-init="content=minContentFilm(film)">
-              <span class="my-text-bold"> Ngày ra mắt: </span>{{movie.ngayRaMat| date:'dd-MM-yyyy' }}</p>
-          </div>
+      <div ng-repeat="phim in listphim | filter:{tenPhim:tenPhim} " class="col-md-3" >
+        
+        <a href="/{{phim._id}}" style="text-decoration:null;color: black;">
+          <img src="images/{{phim.hinh}}" class="img-fluid" 
+            style="height: 350px; width:500px;object-fit: cover;">
+          <div><label style="margin-top:20px " for="exampleInputName"><b style="font-size: 50px"> {{phim.tenPhim}}</b></label></div>
+          <div><label for="exampleInputName" style="font-size: 30px"><b>Thể loại: {{phim.theLoai}}</b></label></div>
+         <label> <span ng-non-bindable></span><b style="font-size: 30px"> Khởi Chiếu: <span>{{phim.phatHanh | date:'MM/dd/yyyy'}}</b></span><br></label>
         </a>
       </div>
+
     </div>
   </div>
-
-
+  <footer >
+    <% include footer.ejs %>
+ </footer>
+  
 </body>
+<script src="stylesheet" href="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="/javascripts/movie/details.js"></script>
 <script src="/javascripts/index.js"></script>
-<footer style="position:relative;margin-top: 100px">
-<% include footer.ejs %>
-</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
 
 </html>
