--- a/views/movie/create.ejs
+++ b/views/movie/create.ejs
@@ -1,98 +1,144 @@
 <!DOCTYPE html>
 <html ng-app="movie">
-   
-<header>
-    <% include ../header.ejs %>
 
-</header>
 <head>
-
-  
-  
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  
-
+    <title>
+        <%= title %>
+    </title>
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="../public/images/icon.jpg"/>
+   
 </head>
-<style class="Main header">
-  /* body {
-  background-image: url("https://staticdelivery.nexusmods.com/images/110/535448-1328651760.jpg");
-  background-size: cover
-} */
-    .createMovie{font-weight: bold}
-</style>
+
+<style>
+
+.main-header{
+    text-align: center;
+    font-size: 36px;
+    text-transform: uppercase;
+    
+}
+.row{
+    margin-top: 50px;
+}
+.btn{
+    color: white;
+    padding: 15px;
+    width: 30%;      
+    
+}
+
+.form-group{
+    margin-left: 140px
+    
+   
+}
+.img-fluid{
+    margin-top:5px;
+}
+footer{
+    position: absolute;
+    width: 100%;
+    bottom:0;
+    margin-left: 0;
+}
+.form-control{
+    height: 60px;
+}
+ </style>
 
 <body ng-controller="createController">
-  <div>
-    <div class="main Main header ">
+    <% include ../header.ejs %>
 
-      <h1 class="tieude" style="text-align:center;margin-bottom: 40px;margin-top: 40px;color:rgba(77, 165, 236, 0.726);text-transform: uppercase;font-weight: bold">
-        Tạo Phim Mới </h1>
-    </div>
-    <div class="film container">
-      <div class="row">
-        <div class="Image col-md-4 ">
-            <!-- <input type="file" class="custom-file-input"> -->
-          <img href="" ng-click="clickUploadImage()" src="/images/image.png" class="img-fluid" alt="Responsive image" id="imageUpload">
-          <button type="submit" class="btn btn-primary   "ng-click="clickUploadImage()" style="margin-top: 10px;margin-left: 90px ;
-                        background-color:#FF3333 ;border-radius: 20px;font-weight: bold">
-            <input type="file" style="display: none" accept="image/*" onchange="readURL(this)" id="fileInput"><i class="fas fa-cloud-upload-alt" ></i>Đăng ảnh</button></input>
+    <div class="container-fluid" style="margin-top:10px">
+        <div class="main-header">
+            <h1><b>Tạo phim mới</b></h1>
         </div>
-        <div class="createMovie col-md-8 my-text-bold">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Tên phim</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="movieHelp" placeholder="Nhập tên phim"
-                ng-model="tenPhim">
-            </div>
-            <div class="form-group">
-              <label for="exampleFormControlSelect1">Thể loại</label>
-              <select class="form-control" id="exampleFormControlSelect1" ng-model="TheLoai" ng-options="option.name as option.value for option in theLoai">
-                <!-- <option>Hành động</option>
-                <option>Kinh dị</option>
-                <option>Tình cảm</option>
-                <option>Viễn tưởng</option>
-                <option>Gia đình</option> -->
-              </select>
-            </div>
-            <div class="form-group">
-              <label> Ngày ra mắt</label>
-              <p><input type="text" id="datepicker" class="form-control " ng-model="ngayRaMat"></p>
+
+        <div class="row">
+           
+            <div class="col-md-5">
+                <from>
+                    <div class="form-group">
+
+                        <img ng-click="chooseImage()"id="img" style=" margin-left: 120px;height: 460px;width: 750p;object-fit: cover"src="../images/logo.jpg" class="img-fluid" alt="Responsive image">
+
+                </from>
+                <input ng-show="false" type='file' onchange="readURL(this);"  id="fileInput"/>
+                <button ng-click="chooseImage()" style="background-image:url(/images/header.jpg);color:white;padding: 10px;margin-left: 280px;;margin-top:30px;height: 55px;font-size: 25px" type="button" class="btnanh btn ">Tải ảnh lên</button>
             </div>
 
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">Nội dung phim</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Nhập nội dung của bộ phim"
-                ng-model="noiDung"></textarea>
-            </div>
-            <button  type="submit"ng-click="taoPhim()" class="btn btn-primary" style="display: block;margin-left :auto;background-color:#FF3333;
-                                   ;border-radius: 20px;font-weight: bold">
-              <i class="fa fa-film" aria-hidden="true" href="/deafaut"></i>
-            </i>Đăng phim</button>
-              
-          </form>
         </div>
-      </div>
+        <div class="col-md-5">
+            <form>
+                <div class="form-group">
+                    <label style="font-size:20px;margin-top: 10px"for="exampleInputName"><b>Tên phim</b></label>
+                    <input style="height: 50px;font-size: 20px"type="text" class="form-control" id="exampleInputname" placeholder="Nhập tên phim" ng-model="tenPhim">
+                </div>
+
+
+                <div class="form-group">
+                    <label style="font-size:20px;" for="exampleFormControlSelect1"><b>Thể loại phim</b></label>
+                    <select style="height: 50px;font-size: 20px" class="form-control" id="exampleFormControlSelect1" ng-model="theLoai" ng-options="option.value as option.name for option in thename" >
+                        <!-- <option>Hành Động</option>
+                        <option>Tình Cảm</option>
+                        <option>Hài</option>
+                        <option>Kinh Dị</option>
+                        <option>Hoạt Hình</option> -->
+                    </select>
+                </div>
+                <div class="form-group date">
+                    <label style="font-size:20px;"for="exampleInputdate"><b>Thời gian phát hành</b></label>
+                    <p  ><input style="height: 60px;font-size: 20px" type="text" id="datepicker" class="form-control" ng-model="phatHanh"></p>
+                </div>
+
+
+                <form class="form-group">
+                    <div class="form-group">
+                        <label style="font-size:20px" for="exampleFormControlTextarea1"><b>Mô tả</b></label>
+                        <textarea  style="font-size: 20px" class="form-control" id="exampleFormControlTextarea1" rows="3" ng-model="moTa" placeholder="Tóm tắt nội dung, diễn viên,..."></textarea>
+                    </div>
+                    <button ng-click="taoPhim()" style="background-image: url(/images/header.jpg);float: right;color: white;padding: 10px;margin-left: 35%;margin-top:10px;height: 55px;font-size: 25px"class="btnanh btn">Tạo phim</button>
+
+                </form>
+
+        </div>
+       
+
     </div>
-  </div>
-  <footer >
-  <% include ../footer.ejs %>
-</footer>
+
+
+    </div>
+  
+       
+    <footer>
+        <% include ../footer.ejs %>
+    </footer>
+  
+    
 </body>
-
+<script src="stylesheet" href="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
-  <script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
     $(function () {
-      $("#datepicker").datepicker();
-      $("#datepicker").datepicker('setDate', 'today');
+        $("#datepicker").datepicker();
+        $( "#datepicker" ).datepicker("setDate", new Date());
     });
-  </script>
- <script src="/javascripts/movie/create.js"></script>
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+<script src="/javascripts/movie/create.js"></script>
+
+
 </html>
