--- a/views/movie/details.ejs
+++ b/views/movie/details.ejs
@@ -41,6 +41,10 @@
                    <span style="font-size:28px"> <strong style="font-size:30px">Nội dung mô tả:</strong> {{phim.noiDung}} </span>
                   
             </div>
+            <div class="form-group">
+                <span style="font-size:28px"> <strong style="font-size:30px">Người tạo: </strong> {{phim.tenNguoiDung}} </span>
+               
+         </div>
             
         </div></div>
         <div class="container my-container-right my-bot-form" style="text-align:center">
@@ -74,6 +78,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="/javascripts/movie/details.js"></script>
+
 
 </html>
 
