--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -5,7 +5,7 @@
     <title>
         <%= title %>
     </title>
-    <link rel="shortcut icon" href="../images/icon.jpg"/>
+    <link rel="icon" href="/images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -77,7 +77,7 @@
                                 <div class="form-group"style="margin-top: 20px">
                                     <img style="object-fit: cover;height:350px;width: 350px"src="../../../images/{{userinfomation.hinh}}" class="img-fluid" alt="Responsive image">
                                     <!-- <img style="object-fit: cover;height:350px;width: 350px"src="../../../images/img.jpg" class="img-fluid" alt="Responsive image"> -->
-                                    <button ng-show="false" ng-click="chooseImage()" style="background: rgb(128, 0, 0);color: white;padding: 10px;margin-left:30%;margin-top:30px;height: 55px;font-size: 20px" type="button" class="btnanh btn ">Tải ảnh lên</button>
+                                    <button ng-show="false" ng-click="chooseImage()" style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left:30%;margin-top:30px;height: 55px;font-size: 20px" type="button" class="btnanh btn ">Tải ảnh lên</button>
 
                             </from>
                         </div>
@@ -93,7 +93,7 @@
                             </div>
                             </form>
                             
-                            <button style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 25px" type="button" class="btnanh btn "><a  style="color:rgb(128, 0, 0);color: white;"href="/user/editprofile">Sửa</a></button>
+                            <a  style="color: white;"href="/user/editprofile">  <button style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 25px" type="button" class="btnanh btn ">Sửa</button></a>
 
                            
 
