--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,9 +56,12 @@ a {
   color:white
   
 }
+.uppercase{
+  text-transform: uppercase;
+
+}
 .textbold{
   font-size: 30px;
-  text-transform: uppercase;
     font-weight: bold;
 }
 .my-text-bold{
