--- a/views/movie/create.ejs
+++ b/views/movie/create.ejs
@@ -4,7 +4,9 @@
 <head>
     <title>
         <%= title %>
-    </title>
+    </title>  
+     <link rel="icon" href="/images/logo.jpg" type="image/x-icon" />
+
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -44,12 +46,7 @@
 .img-fluid{
     margin-top:5px;
 }
-footer{
-    position: absolute;
-    width: 100%;
-    bottom:0;
-    margin-left: 0;
-}
+
 .form-control{
     height: 60px;
 }
@@ -106,7 +103,7 @@ footer{
                         <label style="font-size:20px" for="exampleFormControlTextarea1"><b>Mô tả</b></label>
                         <textarea  style="font-size: 20px" class="form-control" id="exampleFormControlTextarea1" rows="3" ng-model="moTa" placeholder="Tóm tắt nội dung, diễn viên,..."></textarea>
                     </div>
-                    <button ng-click="taoPhim()" style="background-image: url(/images/header.jpg);float: right;color: white;padding: 10px;margin-left: 35%;margin-top:10px;height: 55px;font-size: 25px"class="btnanh btn">Tạo phim</button>
+                    <button id="taoPhim"ng-click="taoPhim()" style="background-image: url(/images/header.jpg);float: right;color: white;padding: 10px;margin-left: 35%;margin-top:10px;height: 55px;font-size: 25px"class="btnanh btn">Tạo phim</button>
 
                 </form>
 
