--- a/views/movie/edit.ejs
+++ b/views/movie/edit.ejs
@@ -98,7 +98,7 @@ footer{
                 </div>
                 <div class="form-group date">
                     <label style="font-size:20px;font-family: 'Righteous', cursive;"for="exampleInputdate"><b>Thời gian phát hành:</b></label>
-                    <p  ><input style="height: 60px;font-size: 20px" type="text" id="datepicker" class="form-control"placeholder="{{phatHanh | date:'dd/MM/yyyy'}}"></p>
+                    <p  ><input style="height: 60px;font-size: 20px" type="text" id="datepicker" class="form-control"placeholder="{{phim.phatHanh | date:'dd/MM/yyyy'}}"></p>
                 </div>
 
 
