--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -5,7 +5,7 @@
     <title>
         <%= title %>
     </title>
-    <link rel="shortcut icon" href="../images/icon.jpg" />
+    <link rel="icon" href="/images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -79,17 +79,17 @@
 
                     <div class="form-group">
                         <label for="email"><b style="font-size:30px;  ">Nhập Email</b></label>
-                        <input ng-model="Email" type="email" style="font-size:20px;height: 50px;margin-top: 10px; "
-                            class="form-control" id="email" aria-describedby="emailHelp" placeholder="Nhập Emal">
+                        <input id="nhapEmail"ng-model="Email" type="email" style="font-size:20px;height: 50px;margin-top: 10px; "
+                            class="form-control" id="email" aria-describedby="emailHelp" placeholder="Nhập Email">
 
                     </div>
                     <div class="form-group">
                         <label for="password"><b style="font-size:30px;">Password</b></label>
-                        <input ng-model="passWord" type="password" style="font-size:20px; margin-top: 10px;height: 50px;"
+                        <input id="nhapPassword"ng-model="passWord" type="password" style="font-size:20px; margin-top: 10px;height: 50px;"
                             class="form-control" id="password" placeholder="Mật Khẩu">
 
                     </div>
-                    <button ng-click="dangNhap()" style="float: right ; margin-top: 20px;background-image: url(/images/header.jpg);color: white;" type="submit" class="btn btn-primary">Đăng Nhập </button>
+                    <button id="clickDangNhap"ng-click="dangNhap()" style="float: right ; margin-top: 20px;background-image: url(/images/header.jpg);color: white;" type="submit" class="btn btn-primary">Đăng Nhập </button>
                 </form>
 
 
