--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -2,10 +2,11 @@
 <html ng-app="movie">
 
 <head>
+        <link rel="icon" href="/images/logo.jpg" type="image/x-icon" />
+
     <title>
         <%= title %>
     </title>
-    <link rel="shortcut icon" href="../images/icon.jpg"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -77,29 +78,29 @@
                 <form novalidate ng-submit="register()">
                     <div class="form-group">
                         <label for="ten"><b style="font-size:30px; ">Tên người dùng:</b></label>
-                        <input ng-model="tenNguoiDung"type="text" style="font-size:20px; margin-top: 10px;height: 50px; "
+                        <input id="tenNguoiDung"ng-model="tenNguoiDung"type="text" style="font-size:20px; margin-top: 10px;height: 50px; "
                             class="form-control" placeholder="Nhập tên người dùng">
 
                     </div>
                     <div class="form-group">
                             <label for="email"><b style="font-size:30px; ">Nhập Email</b></label>
-                            <input ng-model="Email"type="email" style="font-size:20px;height: 50px;margin-top: 10px; "
-                                class="form-control" aria-describedby="emailHelp" placeholder="Nhập Emal">
+                            <input id="email"ng-model="Email"type="email" style="font-size:20px;height: 50px;margin-top: 10px; "
+                                class="form-control" aria-describedby="emailHelp" placeholder="Nhập Email">
     
                         </div>
                     <div class="form-group">
                         <label for="password"><b style="font-size:30px;">Mật khẩu</b></label>
-                        <input ng-model="password" type="password" style="font-size:20px; margin-top: 10px;height: 50px; "
+                        <input id="password"ng-model="password" type="password" style="font-size:20px; margin-top: 10px;height: 50px; "
                             class="form-control"  placeholder="Mật Khẩu" >
                     </div>
                     <div class="form-group">
                         <label for="passwordconfim"><b style="font-size:30px; ">Nhập lại mật khẩu</b></label>
-                        <input ng-model="passWordConfim"type="password" style="font-size:20px; margin-top: 10px;height: 50px; "
+                        <input id="passWordConfim"ng-model="passWordConfim"type="password" style="font-size:20px; margin-top: 10px;height: 50px; "
                             class="form-control"  placeholder="Nhập lại mật khẩu" >
                     </div>
                     
 
-                    <button  ng-click="taoUser()" style="float: right ; margin-top: 20px;background-image: url(/images/header.jpg);color: white;" type="submit" class="btn btn-primary">Đăng Ký</button>
+                    <button  id="taoUser"ng-click="taoUser()" style="float: right ; margin-top: 20px;background-image: url(/images/header.jpg);color: white;" type="submit" class="btn btn-primary">Đăng Ký</button>
                 </form>
 
 
