--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -75,7 +75,7 @@
                     <div class="main-header">
                             <h1><b style="">Đăng Nhập</b></h1>
                         </div>
-                <form>
+                <form id="signin">
 
                     <div class="form-group">
                         <label for="email"><b style="font-size:30px;  ">Nhập Email</b></label>
