--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="text-center" style="
               background-image: url(/images/header.jpg);
-    width: 100%; padding: 20px;bottom: 0;">
+    width: 100%; padding: 20px;bottom: 0;margin-top: 100px">
     <div class="container">
         <div >
             <div class="col-lg-12" style="color:white; font-size: 30px;">
