--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,7 +46,7 @@
 
                 <ul class="navbar-nav" style="margin-left:auto" ng-show="checkLogin">
                     <li class="navbar-nav" style="margin-left:auto ">
-                        <a href="/user/profile" class="customcolor textbold " style="margin-right:20px">
+                        <a id="user"href="/user/profile" class="customcolor textbold " style="margin-right:20px">
                             <i class="fas fa-user"></i> {{user.tenNguoiDung}}</a>
                     </li>
                     <li class="navbar-nav" style="margin-left:auto " ng-show="checkLogin">
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Trở về</button>
-                                    <button ng-click="logOut()"type="button" class="btn btn-primary">Tiếp tục</button>
+                                    <button id="acceptLogOut"ng-click="logOut()"type="button" class="btn btn-primary">Tiếp tục</button>
                                 </div>
                             </div>
                         </div>
