--- a/views/user/editprofile.ejs
+++ b/views/user/editprofile.ejs
@@ -68,14 +68,14 @@
             <div class="col-md-12">
                  
                     </div>
-                    <div class="row" style="  margin-left: 15%; margin-right: 15%;">
+                    <div id="editprofilepage"class="row" style="  margin-left: 15%; margin-right: 15%;">
                         <div class="main-header">
                             <h1><b>Thông tin người dùng</b></h1>
                         </div>
                         <div class="col-md-5" style="margin-left:20px;margin-bottom:20px">
                             <from>
                                 <div class="form-group"style="margin-top: 20px">
-                                    <img style="object-fit: cover;height:350px;width: 350px"src="../../../images/{{hinh}}" id="img" class="img-fluid" alt="Responsive image">
+                                    <img id="imgUser"style="object-fit: cover;height:350px;width: 350px"src="../../../images/{{hinh}}" id="img" class="img-fluid" alt="Responsive image">
                                     <!-- <img ng-show="checkImage()"style="object-fit: cover;height:350px;width: 350px"src="../../../images/user.png" id="img" class="img-fluid" alt="Responsive image"> -->
                                     <input ng-show="false" type="file" onchange="readURL(this)"  id="fileUpdateImage"/>
                                     <button ng-click="chooseImage()" style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left:21%;margin-top:30px;height: 55px;width: auto;font-size: 20px" type="button" class="btnanh btn ">Tải ảnh lên</button>
@@ -94,13 +94,13 @@
                             <div class="form-group">
                                     
                                     <label for="ten"><b style="font-size:30px; font-family: 'Righteous', cursive;">Tên người dùng:</b></label>
-                                <input ng-model="tenNguoiDung"type="text" style="font-size:20px; margin-top: 10px;height: 50px; font-family: 'Righteous', cursive;"
+                                <input id="userName"ng-model="tenNguoiDung"type="text" style="font-size:20px; margin-top: 10px;height: 50px; font-family: 'Righteous', cursive;"
                                     class="form-control" placeholder="Nhập tên người dùng">
             
                                 </div>
                             </form>
                             
-                            <button ng-click="editProfile()" style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 20px" type="button" class="btnanh btn ">Lưu</button>
+                            <button id="clickProfile"ng-click="editProfile()" style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 20px" type="button" class="btnanh btn ">Lưu</button>
 
                            
 
