--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -68,7 +68,7 @@
             <div class="col-md-12">
                  
                     </div>
-                    <div class="row" style="  margin-left: 15%; margin-right: 15%;">
+                    <div id="profilePage"class="row" style="  margin-left: 15%; margin-right: 15%;">
                         <div class="main-header">
                             <h1><b>Thông tin người dùng</b></h1>
                         </div>
@@ -93,9 +93,50 @@
                             </div>
                             </form>
                             
-                            <a  style="color: white;"href="/user/editprofile">  <button style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 25px" type="button" class="btnanh btn ">Sửa</button></a>
+                            <a style="color: white;"href="/user/editprofile">  <button style="background-image: url(/images/header.jpg);color: white;padding: 10px;margin-left: 80%;position:absolute;bottom: 35px;height: 55px;font-size: 20px" type="button" class="btnanh btn ">Sửa</button></a>
 
                            
+                            <p data-placement="top" data-toggle="tooltip" title="Edit" data-original-title="Edit">
+                                <button  style="background-image: url(/images/header.jpg);color: white;height: 55px;font-size: 20px;position: absolute;
+                                bottom: 35px;" class="btn btn" data-title="Edit" data-toggle="modal" data-target="#edit" data-backdrop="static" data-keyboard="false">
+                                    <span class="glyphicon glyphicon-pencil"> Đổi password</span>
+                                </button>
+                            </p>
+                            
+                            <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                            
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                           
+                                        </div>
+                                        <!--/.modal-header-->
+                            
+                                        <div class="modal-body" >
+                                            <form method="post" id="updateForm" >
+                                               
+                                              
+                                                <h4><u><strong>Đổi Mật khẩu</strong></u></h4>
+                                                <div class="form-group" id="currentPass-group">
+                                                    <label for="current_pass">Mật khẩu hiện tại :</label>
+                                                    <input ng-model="oldPassword"class="form-control" type="password" name="current_pass" id="current_pass">
+                                                </div>
+                            
+                                                <div class="form-group">
+                                                    <label for="new_pass">Mật khẩu mới :</label>
+                                                    <input ng-model="newPassword" class="form-control" type="password" name="new_pass" id="new_pass">
+                                                </div>
+                            
+                                                <div class="form-group">
+                                                    <label for="confirm_pass">Xác nhận lại mật khẩu :</label>
+                                                    <input ng-model="confirmPassword" class="form-control" type="password" name="confirm_pass" id="confirm_pass">
+                                                </div>
+                            
+                                                <div class="modal-footer">
+                                                    <!-- <input type="submit" name="submit" class="btn btn-block btn-warning" value="Save changes" /> -->
+                                                    <button style="background-image: url(/images/header.jpg);color: white" ng-click="changePassword()" name="submit" class="btn btn">Lưu thay đổi</button>
+                                                    <button style="background-color: gray;color: white"type="button" class="btn btn-default" data-dismiss="modal">Trở về</button>
 
                     </div>
 
@@ -134,4 +175,4 @@
 <script src="/javascripts/user/profile.js"></script>
 
 
-</html>
+
