--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -45,12 +45,7 @@
     }
 
     
-    footer{
-    position: absolute;
-    width: 100%;
-    bottom:0;
-    margin-left: 0;
-}
+  
 .container-fluid{
     
    
@@ -70,7 +65,7 @@
     <div class="container-fluid">
        
 
-        <div style="border:  solid; margin-left: 20%;margin-right: 20%;" class="row">
+        <div style="border:solid; margin-left: 20%;margin-right: 20%;margin-top: 50px" class="row">
             <div class="col-md-12">
                     <div class="main-header">
                             <h1><b>Đăng Ký</b></h1>
