--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,15 +48,18 @@
 <body>
 
   <% include header.ejs %>
+  
+
+
   <div class="tieude"><b>Danh Sách Phim Mới</b></div>
   <div class="container-fluid">
 
     <div id="index"class="row">
-
+     
       <div ng-repeat="phim in listphim | filter:{tenPhim:tenPhim} " class="col-md-3 movie" >
         
         <a href="/{{phim._id}}" style="text-decoration:null;color: black;">
-          <img id="image"ng-src="images/logo.jpg"src="images/{{phim.hinh}}" class="img-fluid" 
+          <img id="image"ng-src="images/logo.jpg"src="/images/{{phim.hinh}}" class="img-fluid" 
             style="height: 350px; width:500px;object-fit: cover;">
           <div><label style="margin-top:20px " for="exampleInputName"><b style="font-size: 50px"> {{phim.tenPhim}}</b></label></div>
           <div><label for="exampleInputName" style="font-size: 30px"><b>Thể loại: {{phim.theLoai}}</b></label></div>
@@ -76,6 +79,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="/javascripts/index.js"></script>
+<script src="/javascripts/common.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
