--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -10,6 +10,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+        
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,6 +76,8 @@
                     <div class="main-header">
                             <h1><b style="">Đăng Nhập</b></h1>
                         </div>
+                        <!-- Button trigger modal -->
+
                 <form id="signin">
 
                     <div class="form-group">
@@ -90,7 +93,33 @@
 
                     </div>
                     <button id="clickDangNhap"ng-click="dangNhap()" style="float: right ; margin-top: 20px;background-image: url(/images/header.jpg);color: white;" type="submit" class="btn btn-primary">Đăng Nhập </button>
-                </form>
+                    <div class="col-md-6"><a data-toggle="modal" data-target="#myModal" class="forgot-link" href="/user/resetpassword">Quên
+                            mật khẩu ?</a></div>
+
+                    <!-- <div class="modal fade" id="myModal" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h3 class="text-center modal-title my-modal-title">Khôi phục mật khẩu</h3>
+                                    </div>
+                                    <form name="emailForm" ng-validate="validationOptions">
+                                        <div class="modal-body text-center">
+                                            <div class="form-group">
+                                                <label for="email">Nhập email của bạn:</label>
+                                                <input name="email" ng-model="confirmEmail" type="text" class="form-control" placeholder="Email">
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" ng-click="forgotPassword()" class="create-form-button btn btn-primary">Gửi</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div> -->
+                </form>               
+                 <a href="/api/user/google"> <img src="/images/google.png" alt="Đăng nhập với Google+" width="50%" style="padding-top: 20px"></a>
+
 
 
             </div>
@@ -111,6 +140,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/javascripts/common.js"></script>
 <script>
     $(function () {
         $("#datepicker").datepicker();
@@ -122,3 +152,4 @@
 
 
 </html>
+
