--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -116,6 +116,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/javascripts/common.js"></script>
+
 <script>
     $(function () {
         $("#datepicker").datepicker();
